--- a/.github/workflows/run-native-install.yml
+++ b/.github/workflows/run-native-install.yml
@@ -28,6 +28,11 @@ jobs:
           sudo apt-get purge mongodb-org*
           sudo rm -r /var/log/mongodb
           sudo rm -r /var/lib/mongodb
+      - name: Clear Disk Space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          df -h
       - name: Ansible Bootstrap
         run: wget https://raw.githubusercontent.com/edx/configuration/$OPENEDX_RELEASE/util/install/ansible-bootstrap.sh -O - | sudo -E bash
       - name: Generate passwords
@@ -47,4 +52,7 @@ jobs:
           payload: '{"job":"https://github.com/${{ github.repository}}/actions/workflows/run-native-install.yml","status":"${{ job.status }}","release":"${{ env.OPENEDX_RELEASE }}"}'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
+      - name: Disk Space
+        run: df -h
         if: always()
