--- a/.github/workflows/run-native-install.yml
+++ b/.github/workflows/run-native-install.yml
@@ -45,14 +45,14 @@ jobs:
           ls -l
       - name: Native Install
         run: wget https://raw.githubusercontent.com/edx/configuration/$OPENEDX_RELEASE/util/install/native.sh -O - | bash
-      - name: Notify Slack Channel
+      - name: Send custom JSON data to Slack workflow
         id: slack
         uses: slackapi/slack-github-action@v1.14.0
         with:
           payload: '{"job":"https://github.com/${{ github.repository}}/actions/workflows/run-native-install.yml","status":"${{ job.status }}","release":"${{ env.OPENEDX_RELEASE }}"}'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always()
+        if: failure()
       - name: Disk Space
         run: df -h
         if: always()
