--- a/.github/workflows/run-native-install.yml
+++ b/.github/workflows/run-native-install.yml
@@ -15,6 +15,10 @@ jobs:
       OPENEDX_RELEASE: open-release/${{ matrix.release }}.master
 
     steps:
+      - name: Use Node 12
+        uses: actions/setup-node@v2
+        with:
+          node-version: "12"
       - name: Remove MySQL
         run: |
           sudo service mysql stop
