refactor: address PR reviews

--- a/.github/workflows/add-label-on-failure-report.yml
+++ b/.github/workflows/add-label-on-failure-report.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   add_label:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.issue.title, '[Test failure]') && !contains(github.event.issue.labels.*.name, 'needs triage') }}
+    if: ${{ contains(github.event.issue.title, 'Test failure') && !contains(github.event.issue.labels.*.name, 'needs triage') }}
     steps:
       - name: apply needs triage label
         uses: actions-ecosystem/action-add-labels@v1
