refactor: add release testing label as default for test failure reports

--- a/.github/ISSUE_TEMPLATE/test-failures.yml
+++ b/.github/ISSUE_TEMPLATE/test-failures.yml
@@ -1,7 +1,7 @@
 name: 📑 Test failure report
 description: Issue Template for Reporting Testing Failures.
 title: "[Test failure] <Test Case ID>: <DESCRIPTIVE TITLE>"
-labels: ["needs triage"]
+labels: ["needs triage", "release testing"]
 body:
   - type: markdown
     attributes:
